// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThinkingActor Snapshots > content formatting > renders with code blocks 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Consider this code:
<pre><code>const x = 42;</code></pre>
This sets x to 42.</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > content formatting > renders with inline code 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Use the <code>map</code> function to transform the array.</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > empty state > renders empty when no iterations 1`] = `""`;

exports[`ThinkingActor Snapshots > expanded/collapsed > renders collapsed iteration 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Thinking content here</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > expanded/collapsed > renders expanded iteration 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Thinking content here</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > injected styles > injects styles into document head 1`] = `
"
/* Thinking Container */
.thinking-container {
  background: transparent;
  border: none;
  margin: 8px 0;
  border-radius: 6px;
}

/* Thinking Header */
.thinking-header {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 6px 0;
  cursor: pointer;
  user-select: none;
  color: var(--vscode-descriptionForeground);
  font-size: 12px;
  transition: opacity 0.15s ease;
}

.thinking-header:hover {
  opacity: 0.8;
}

.thinking-icon {
  font-size: 14px;
}

.thinking-label {
  flex: 1;
}

.thinking-toggle {
  transition: transform 0.2s ease;
}

.thinking-container.collapsed .thinking-toggle {
  transform: rotate(-90deg);
}

/* Thinking Body */
.thinking-body {
  padding: 0 0 8px 10px;
  font-size: 12px;
  color: var(--vscode-descriptionForeground);
  line-height: 1.5;
  white-space: pre-wrap;
  word-break: break-word;
  max-height: 400px;
  overflow-y: auto;
}

.thinking-container.collapsed .thinking-body {
  display: none;
}

/* Code blocks in thinking content */
.thinking-body pre {
  background: var(--vscode-textCodeBlock-background);
  padding: 8px;
  border-radius: 4px;
  margin: 8px 0;
  overflow-x: auto;
}

.thinking-body code {
  font-family: var(--vscode-editor-font-family);
  font-size: 11px;
}

/* Streaming state - subtle pulsing animation on icon */
.thinking-container.streaming .thinking-icon {
  animation: thinkingPulse 1.5s ease-in-out infinite;
}

@keyframes thinkingPulse {
  0%, 100% { opacity: 1; }
  50% { opacity: 0.5; }
}

/* Scrollbar styling */
.thinking-body::-webkit-scrollbar {
  width: 8px;
}

.thinking-body::-webkit-scrollbar-track {
  background: transparent;
}

.thinking-body::-webkit-scrollbar-thumb {
  background: var(--vscode-scrollbarSlider-background);
  border-radius: 4px;
}

.thinking-body::-webkit-scrollbar-thumb:hover {
  background: var(--vscode-scrollbarSlider-hoverBackground);
}

/* Iteration badge */
.thinking-iteration {
  background: var(--vscode-badge-background);
  color: var(--vscode-badge-foreground);
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 10px;
  font-weight: 500;
}
"
`;

exports[`ThinkingActor Snapshots > multiple iterations > renders multiple iterations 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Thinking (Iteration 1)</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">First approach: trying method A</div>
        </div>
      </div><div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="2">
        <div class="thinking-container collapsed" id="thinking-2">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Thinking (Iteration 2)</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Second approach: trying method B</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > single iteration > renders completed iteration 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Analysis complete.</div>
        </div>
      </div>"
`;

exports[`ThinkingActor Snapshots > single iteration > renders single thinking iteration 1`] = `
"<div id="thinking-iteration-X" class="thinking-iteration-wrapper anim-bubble-in" data-actor="thinking" data-iteration="1">
        <div class="thinking-container collapsed" id="thinking-1">
          <div class="thinking-header">
            <span class="thinking-icon">💭</span>
            <span class="thinking-label">Chain of Thought</span>
            <span class="thinking-toggle">▼</span>
          </div>
          <div class="thinking-body">Let me analyze this problem step by step...</div>
        </div>
      </div>"
`;

exports[`ThinkingActor State Snapshots > captures initial state 1`] = `
{
  "content": "",
  "expandedIndices": [],
  "iterations": [],
  "streaming": false,
}
`;

exports[`ThinkingActor State Snapshots > captures state after completion 1`] = `
{
  "content": "Done thinking.",
  "expandedIndices": [],
  "iterations": [
    {
      "complete": true,
      "containerId": "thinking-iteration-X",
      "content": "Done thinking.",
      "index": 1,
    },
  ],
  "streaming": false,
}
`;

exports[`ThinkingActor State Snapshots > captures state with active thinking 1`] = `
{
  "content": "Processing...",
  "expandedIndices": [],
  "iterations": [
    {
      "complete": false,
      "containerId": "thinking-iteration-X",
      "content": "Processing...",
      "index": 1,
    },
  ],
  "streaming": false,
}
`;
